# kelte

./: .gitignore  .vshrc  NumpyMapping.md  README.rst  entrypoints.txt  kelte-win.spec  requirements.txt  run.py  setup.cfg  setup.py  tox.ini
assets/: Deferral-Square.all.map
assets/data/: expletives.txt  player.yml
assets/data/dungeons/: basic.yml  features.yml
assets/data/items/: accessories.yml  armor.yml  containers.yml  food.yml  lights.yml  miscellaneous.yml  tools.yml  weapons.yml
assets/data/mobs/: beasts.yml  celtic_myths.yml  constructs.yml  egyptian_myths.yml  elementals.yml  fey.yml  giants.yml  humanoids.yml  oozes.yml  plants.yml  undead.yml
assets/fonts/: Deferral-Square.cp437.map  Deferral-Square.cp850.map  Deferral-Square.cp866.map
kelte/: __main__.py  __metadata__.py  api.py  color.py  colors.py  config.py  effects.py  errors.py  fov.py  initialization.py  items.py  lighting.py  mobs.py  rendering.py  tile.py  tiles.py  typeface.py
kelte/cli/: build.py  kelte.py  run.py
kelte/ecs/: __init__.py  component.py  descriptors.py  entity.py  event.py  mixins.py  queue.py  registry.py  system.py
kelte/ecs/event/: event.py
kelte/engine/: __init__.py
kelte/engine/ecs/: __init__.py  api.py  component.py  entity.py  system.py
kelte/engine/maths/: __init__.py  bresenham.py  bresenham.pyx  distance.py  graphs.py  grids.py  noise.py  pathing.py  point.py  vector.py
kelte/engine/noise/: cellular.py  lattice.py  utils.py
kelte/engine/ui/: __init__.py  bar.py  event.py  modifier.py  panel.py  window.py
kelte/math/: distance.py  point.py  vector.py
kelte/maths/: __init__.py  graphs.py  noise.py  point.py  vector.py
kelte/procgen/: __init__.py  api.py  cooridors.py  levels.py  mobs.py  rooms.py
kelte/procgen/encounters/: api.py
kelte/systems/: combat.py  dungeon.py  movement.py
kelte/tiles/: __init__.py  __main__.py  api.py
kelte/tiles/data/: dungeon.yml
kelte/ui/: bar.py  event.py  modifier.py  window.py
kelte/utils/: decorators.py  terminal.py
requirements/: build.txt  docs.txt  profiling.txt  test.txt
scripts/: basic.py  tmp
tests/: decorators.py  test_colors.py  test_config.py
tests/ecs/: test_ecs_component.py  test_ecs_entity.py
tests/math/: test_bresenham.py  test_create_grid.py  test_math_distance.py  test_math_points.py
tests/ui/: test_ui_event.py  test_ui_key.py
(+23 files in other folders)
